// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<StatusWithBullet /> should match its empty snapshot 1`] = `
<span
  className="sc-bdVaJa kyWlgl k-StatusWithBullet k-StatusWithBullet--success k-StatusWithBullet--tiny k-StatusWithBullet--regular"
>
  <span
    aria-hidden="true"
    className="k-StatusWithBullet__bullet"
  />
  This is a text
</span>
`;

exports[`<StatusWithBullet /> should match its snapshot with children 1`] = `
<span
  className="sc-bdVaJa kyWlgl k-StatusWithBullet k-StatusWithBullet--danger k-StatusWithBullet--tiny k-StatusWithBullet--regular"
>
  <span
    aria-hidden="true"
    className="k-StatusWithBullet__bullet"
  />
  Sample message
</span>
`;

exports[`<StatusWithBullet /> should match its snapshot with many props 1`] = `
<span
  className="sc-bdVaJa kyWlgl k-StatusWithBullet k-u-sample-class k-StatusWithBullet--none k-StatusWithBullet--micro k-StatusWithBullet--light"
>
  <span
    aria-hidden="true"
    className="k-StatusWithBullet__bullet k-u-sample-class"
  />
  <span
    className="k-u-sample-class"
  >
    Sample message
  </span>
</span>
`;
